# CampusOrder

./: README.md
Android/common/: CMakeLists.txt  build.gradle  proguard-rules.pro
Android/common/src/main/: AndroidManifest.xml
Android/common/src/main/cpp/: native-lib.cpp
Android/common/src/main/java/com/erning/common/: App.java
Android/common/src/main/java/com/erning/common/absbase/: AbsBaseActivity.java  AbsBaseFragment.java
Android/common/src/main/java/com/erning/common/activity/: CustomCaptureActivity.kt  ImageActivity.java  VideoActivity.java
Android/common/src/main/java/com/erning/common/adapter/: BaseFragmentPagerAdapter.java  BaseJsonArrayAdapter.java  BaseListAdapter.java  BaseRecyclerViewAdapter.kt  LeftSlideRemoveAdapter.java
Android/common/src/main/java/com/erning/common/dialog/: MyViewDialog.java  MyprogressDialog.java
Android/common/src/main/java/com/erning/common/listener/: TextWatcherListener.java
Android/common/src/main/java/com/erning/common/net/: FastJsonConverterFactory.java  HttpBaseParamsInterceptor.java  Network.java  RemoteService.java  SignInterceptor.java
Android/common/src/main/java/com/erning/common/sharedperference/: AesUtils.java  CPPUtils.java  EncryptUtil.java  SecuritySharedPreference.java  (+1 more)
Android/common/src/main/res/layout/: activity_custom_capture.xml  activity_image.xml  activity_video.xml  dialog.xml  item_image.xml  notisdialog.xml  view_left_slide_remove.xml
Android/common/src/main/res/raw/: coinbulb.bks  coinbulb2.cer
Android/common/src/main/res/values/: attr.xml  attrss.xml  strings.xml  styles.xml
(+168 files in other folders)
